# qlens-beta

./: .README.md.swp  .pixelgrid.cpp.swp  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt~  CMakeLists_old.txt  GetDistPlots.py  GregsMathHdr.cpp  GregsMathHdr.h  MANIFEST.in  Makefile  Makefile_Mendel  Makefile_all  Makefile_all~  Makefile_basic  Makefile_conda  Makefile_conda_eigen  Makefile_conda_eigen~  Makefile_conda~  Makefile~  Python_QLens.ipynb  README.md  README.md~  alphafit.in  alphafit.py  alphafit_anneal.in  alphafit_multinest.in  alphafit_multinest.py  alphafit_nest.in  alphafit_polychord.in  alphafit_twalk.in  alphafit_wl.in  brent.cpp  brent.h  cg.cpp  cmakeline  commands.cpp  complex_functions.h  cosmo.cpp  cosmo.h  (+74 more)
QLensTutorials/: README.md  mask.fits  testCAM-i_sigma_map.fits
QLensTutorials/chains_delaunay_fit/: src_pixel.y
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  executables.cmake  multinest.cmake  mumps.cmake  polychord.cmake  polychord.cmake~  pybind11.cmake  python.cmake  python.cmake~  python_install.cmake  python_old.cmake  scalapack.cmake  utils.cmake
cmake/modules/: FindMETIS.cmake  FindMULTINEST.cmake  FindMUMPS.cmake  FindNumPy.cmake  FindPolychord.cmake  FindSCALAPACK.cmake  FindScotch.cmake
cmake/multinest-prefix/tmp/: multinest-cfgcmd.txt  multinest-gitclone.cmake  multinest-gitupdate.cmake
cmake/patches/: polychord_cmake.patch
cmake/pybind11-prefix/tmp/: pybind11-gitclone.cmake  pybind11-gitupdate.cmake
config/: Makefile  planck.csm  qlens_python.mk  qlens_python.mk~  qlens_umfpack_config.mk
contrib/fitpack/: fpbspl.f  fpcurf.f  fpgivs.f
contrib/mlpack/: base.hpp  core.hpp  prereqs.hpp
contrib/mlpack/core/metrics/: lmetric.hpp~  lmetric_impl.hpp~
contrib/mlpack/core/tree/: ballbound_impl.hpp  binary_space_tree.hpp~  cellbound_impl.hpp  hollow_ball_bound_impl.hpp  hrectbound_impl.hpp  tree.hpp
contrib/mlpack/methods/kmeans/: .dual_tree_kmeans_impl.hpp.swp  .kmeans_impl.hpp.swp  .max_variance_new_cluster.hpp.swp  .max_variance_new_cluster_impl.hpp.swp  allow_empty_clusters.hpp  dual_tree_kmeans.hpp  dual_tree_kmeans_impl.hpp  dual_tree_kmeans_impl.hpp~  dual_tree_kmeans_omp.hpp  dual_tree_kmeans_rules_impl_omp.hpp  dual_tree_kmeans_statistic.hpp  dual_tree_kmeans_statistic.hpp~  kill_empty_clusters.hpp  kmeans.hpp  kmeans_impl.hpp  (+6 more)
data/: demo_noisemap.fits  sim_hst_image.fits
data/chains_alpha_multinest/: alpha_multinest  alpha_multinest.bestfit  alpha_multinest.bf  alpha_multinest.chain_info  alpha_multinest.commands  alpha_multinest.hist2d_params  alpha_multinest.py  alpha_multinest.py_latex_paramnames  alpha_multinest_2D.py  alpha_multinest_2D_q_b  alpha_multinest_2D_q_b_cont  alpha_multinest_2D_q_b_x  alpha_multinest_2D_shear1_b  alpha_multinest_2D_shear1_b_cont  alpha_multinest_2D_shear1_b_y  alpha_multinest_2D_shear1_q  alpha_multinest_2D_shear1_q_cont  alpha_multinest_2D_shear1_theta  alpha_multinest_2D_shear1_theta_cont  alpha_multinest_2D_shear1_theta_x  alpha_multinest_2D_shear1_xc  alpha_multinest_2D_shear1_xc_cont  alpha_multinest_2D_shear1_xc_x  alpha_multinest_2D_shear1_yc  alpha_multinest_2D_shear1_yc_cont  alpha_multinest_2D_shear2_b  alpha_multinest_2D_shear2_b_cont  alpha_multinest_2D_shear2_q  alpha_multinest_2D_shear2_q_cont  alpha_multinest_2D_shear2_q_y  alpha_multinest_2D_shear2_shear1  alpha_multinest_2D_shear2_shear1_cont  alpha_multinest_2D_shear2_theta  alpha_multinest_2D_shear2_theta_cont  alpha_multinest_2D_shear2_xc  alpha_multinest_2D_shear2_xc_cont  alpha_multinest_2D_shear2_yc  alpha_multinest_2D_shear2_yc_cont  alpha_multinest_2D_shear2_yc_x  alpha_multinest_2D_theta_b  (+25 more)
dockerfiles/: Dockerfile  cmake_command.txt
help/Miscellaneous/: misc.md
help/PyBind11/: basics.md
imgs/: hst_psf.fits  mask.fits
include/: .profile.h.swp  GregsMathHdr.h  brent.h  complex_functions.h  cosmo.h  delaunay.h  errors.h  gauss.h  hyp_2F1.h  imgsrch.h  lensintegral.h  lensintegral.h~  lensvec.h  mathexpr.h  mathfuncs.h  matrix.h  mcmceval.h  mcmchdr.h  modelparams.h  params.h  pixelgrid.h  powell.h  profile.h  profile_new.h  qlens.h  random.h  romberg.h  sbprofile.h  simplex.h  sort.h  spline.h  trirectangle.h  vector.h
inifile/: alphafit.in  alphafit_anneal.in  alphafit_multinest.in  alphafit_nest.in  alphafit_polychord.in  delaunay_fit_demo.in  demo1.in  mask.fits  pixel_fit_demo.in  ptsrc_fit_demo.in  sim_ptsrc.fits  test_pixel.in
inifile/QLensTutorials/: .delaunay_fit_tutorial.in.swp  OBS_testCAM-i.fits  delaunay_fit_tutorial.in  psf.fits  psf_trunc.fits
inifile/QLensTutorials/chains_delaunay_fit/: img_pixel.x  src_pixel.x  tempplot.gnuplot
python/: .alphafit.py.swp  GetDistPlots.py  Makefile  alphafit.py  alphafit.py~  alphafit_jupyter.ipynb  alphafit_multinest.py  cmake_install.cmake  delaunay_fit_demo.py  demo.py  doublesrc.py  qlens_helper.py  qstart.py  sbprofile_demo.py
python/multinest-prefix/tmp/: multinest-cfgcmd.txt  multinest-gitclone.cmake
python/mumps-prefix/tmp/: mumps-gitclone.cmake  mumps-gitupdate.cmake
python/pybind11-prefix/tmp/: pybind11-gitclone.cmake  pybind11-gitupdate.cmake
python/qlens/: __init__.py  qlens_helper.py  qstart.py
src/: .commands.cpp.swp  .lens.cpp.swp  .profile.cpp.swp  .qlens_export.cpp.swp  .qlens_wrapper.cpp.swp  GregsMathHdr.cpp  brent.cpp  cg.cpp  commands.cpp  cosmo.cpp  cosmocalc.cpp  egrad.cpp  errors.cpp  gauss.cpp  hyp_2F1.cpp  imgsrch.cpp  lens.cpp  lenscalc.cpp  mcmceval.cpp  mcmchdr.cpp  mkdist.cpp  modelparams.cpp  models.cpp  params.cpp  pixelgrid.cpp  profile.cpp  qlens.cpp  qlens_export.cpp  qlens_export_new.cpp  qlens_wrapper.cpp  qlens_wrapper.cpp~  qlens_wrapper_new.cpp  romberg.cpp  sbprofile.cpp  simplex.cpp  sort.cpp  spline.cpp  trirectangle.cpp
~/: Makefile  README.md  brent.h  cg.cpp  cg.h  delaunay.h  gauss.h  hyp_2F1.cpp  lensvec.h  mcmchdr.cpp  models.cpp  paramNames.py  pixelgrid.h  plotlens  powell.cpp  qlens_python.mk  qlens_wrapper.cpp  rand.h  random.h  romberg.h  simplex.cpp  simplex.h  sort.cpp  spline.cpp  spline.h  trirectangle.cpp  trirectangle.h  vector.h
~/contrib/fitpack/: curfit.f  fprota.f
(+29 files in other folders)
